kube/deploy/core/6-operators/k8up/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-apiserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8up
  egress:
    - toEntities: [kube-apiserver]
